--- a/yaml/Openclash-Smart-6.20.yaml
+++ b/yaml/Openclash-Smart-6.20.yaml
@@ -95,17 +95,11 @@ dns:
   enhanced-mode: fake-ip
   fake-ip-range: 198.20.0.1/16
   default-nameserver:
+    - 223.5.5.5
     - 119.29.29.29
-    - 180.184.1.1
-  proxy-server-nameserver:
-    - https://doh.pub/dns-query
-    - https://101.34.254.32/ihtw 
-  direct-nameserver:
-    - https://doh.pub/dns-query
-    - https://101.34.254.32/ihtw
-  nameserver:
-    - 202.103.24.68
-    - 202.103.44.150
+  proxy-server-nameserver: [quic://dns.alidns.com/dns-query, https://sm2.doh.pub/dns-query]
+  direct-nameserver: [quic://dns.alidns.com/dns-query, https://sm2.doh.pub/dns-query]
+  nameserver: [https://dns.google/dns-query, https://dns.cloudflare.com/dns-query]
   fake-ip-filter:
     # - "rule-set:fake-ip-filter,private_domain,cn_domain"
     - +.qeayr.cn
