--- a/yaml/Openclash-Smart-8.4.yaml
+++ b/yaml/Openclash-Smart-8.4.yaml
@@ -9,6 +9,15 @@
 # ⭐️⭐️smart策略组必须要需要模型，下载下方链接内Model.bin（打开链接往下拉能看到）文件放到OpenClash: (/etc/openclash/Model.bin)，如果不想用模型：uselightgbm: true,collectdata: true,  智能策略组的这两个参数改成false
 # https://github.com/vernesong/mihomo/releases
 
+# ==================== 锚点配置 ====================
+# 代理提供者模板 - 订阅源基础配置
+BaseProvider: &BaseProvider {type: http, interval: 86400, proxy: DIRECT, health-check: {enable: true, url: 'https://www.gstatic.com/generate_204', interval: 300}, filter: '^(?!.*(群|邀请|返利|循环|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|过期|已用|联系|邮箱|工单|贩卖|通知|倒卖|防止|国内|地址|频道|无法|说明|使用|提示|特别|访问|支持|教程|关注|更新|作者|加入|USE|USED|TOTAL|EXPIRE|EMAIL|Panel|Channel|Author))'}
+
+# 策略组类型模板 - 定义不同的策略组基础配置
+BaseFB: &BaseFB       {type: fallback, interval: 200, lazy: true, url: 'https://www.gstatic.com/generate_204'}
+BaseLB: &BaseLB       {type: load-balance, interval: 200, lazy: true, url: 'https://www.gstatic.com/generate_204'}
+BaseSmart: &BaseSmart {type: smart, interval: 200, lazy: true, url: 'https://www.gstatic.com/generate_204', hidden: true, uselightgbm: true}
+
 # 机场订阅
 proxy-providers:
   # 优质订阅源 - 优质节点集合，使用时请修改
@@ -285,5 +294,6 @@ rule-providers:
     interval: 86400
     url: https://raw.githubusercontent.com/juewuy/ShellCrash/refs/heads/dev/public/fake_ip_filter.list
     path: ./ruleset/fake_ip_filter.list
+
 
 
