--- a/yaml/Openclash-Smart-8.4.yaml
+++ b/yaml/Openclash-Smart-8.4.yaml
@@ -132,7 +132,7 @@ proxy-groups:
   - {name: 🎥 NETFLIX, <<: *pr}
   - {name: 🏰 Disney, <<: *pr}
   - {name: 📺 HBO, <<: *pr}
-  - {name: 📽️ Emby, <<: *pr}
+  - {name: 📽️ Emby, <<: *pr_c}
   - {name: 📸 Instagram, <<: *pr}
   - {name: 💬 WhatsApp, <<: *pr}
   - {name: 🖼️ Facebook, <<: *pr}
@@ -141,8 +141,8 @@ proxy-groups:
   - {name: ✈️ Speedtest, <<: *pr}
   - {name: 💶 PayPal, <<: *pr}
   - {name: 🎮 GameDownload, <<: *pr_c}
-  - {name: 🎮 Steam, <<: *pr}
-  - {name: 🎮 Game, <<: *pr}
+  - {name: 🎮 Steam, <<: *pr_c}
+  - {name: 🎮 Game, <<: *pr_c}
   - {name: 🍎 Apple, <<: *pr_c}
   - {name: 🎯 直连, <<: *pr_c}
   - {name: 🐟 漏网之鱼, type: select, include-all: true, proxies: [🚀 默认代理, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🇩🇪🇫🇷🇬🇧 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 🌍 其他节点, 自建/家宽节点, 🌐 全部节点]}
@@ -285,3 +285,4 @@ rule-providers:
     interval: 86400
     url: https://raw.githubusercontent.com/juewuy/ShellCrash/refs/heads/dev/public/fake_ip_filter.list
     path: ./ruleset/fake_ip_filter.list
+
