--- a/yaml/Openclash-Smart-8.4.yaml
+++ b/yaml/Openclash-Smart-8.4.yaml
@@ -141,7 +141,7 @@ proxy-groups:
   - {name: Microsoft, <<: *pr_c, icon: https://git.imee.me/https://github.com/Koolson/Qure/raw/master/IconSet/Color/Microsoft.png}
   - {name: Speedtest, type: select, include-all: true, icon: https://git.imee.me/https://github.com/Koolson/Qure/raw/master/IconSet/Color/Speedtest.png}
   - {name: PayPal, <<: *pr, icon: https://git.imee.me/https://github.com/Koolson/Qure/raw/master/IconSet/Color/PayPal.png}
-  #- {name: GameDownload, <<: *pr_c, icon: https://git.imee.me/https://github.com/Koolson/Qure/raw/master/IconSet/Color/Game.png}
+  - {name: GameDownload, <<: *pr_c, icon: https://git.imee.me/https://github.com/Koolson/Qure/raw/master/IconSet/Color/Game.png}
   - {name: Steam, <<: *pr, icon: https://git.imee.me/https://github.com/Koolson/Qure/raw/master/IconSet/Color/Steam.png}
   - {name: Game, <<: *pr, icon: https://git.imee.me/https://github.com/Koolson/Qure/raw/master/IconSet/Color/Game.png}
   - {name: Apple, <<: *pr_c, icon: https://git.imee.me/https://github.com/Koolson/Qure/raw/master/IconSet/Color/Apple.png}
@@ -214,8 +214,8 @@ rules:
   - RULE-SET,Instagram_domain,Instagram
   - RULE-SET,WhatsApp_domain,WhatsApp
   - RULE-SET,Facebook_domain,Facebook
-  - RULE-SET,GameDownload_domain-1,Game
-  - RULE-SET,GameDownload_domain-2,Game
+  - RULE-SET,GameDownload_domain-1,GameDownload
+  - RULE-SET,GameDownload_domain-2,GameDownload
   - RULE-SET,Steam_domain,Steam
   - RULE-SET,Epic_domain,Game
   - RULE-SET,EA_domain,Game
@@ -280,5 +280,6 @@ rule-providers:
   google_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/google.mrs"}
   telegram_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/telegram.mrs"}
   netflix_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/netflix.mrs"}
+
 
 
