--- a/yaml/Openclash-Smart-8.6.yaml
+++ b/yaml/Openclash-Smart-8.6.yaml
@@ -85,6 +85,10 @@ dns:
     #- https://dns.alidns.com/dns-query
     #- https://doh.pub/dns-query
   fake-ip-filter:
+    - '*.playstation.net'
+    - '*.playstation.com'
+    - '*.playstationnetwork.com'
+    - '*.sonyentertainmentnetwork.com'
     - +.qeayr.cn
     - +.saojc.xyz
     - +.sssyun.xyz
@@ -283,6 +287,7 @@ rule-providers:
   google_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/google.mrs"}
   telegram_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/telegram.mrs"}
   netflix_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/netflix.mrs"}
+
 
 
 
