--- a/yaml/Openclash-Smart-8.4.yaml
+++ b/yaml/Openclash-Smart-8.4.yaml
@@ -194,10 +194,10 @@ proxy-groups:
 
 # 规则匹配
 rules:
-  #- DOMAIN-SUFFIX,cod-assets.cdn.callofduty.com,游戏节点
+  - DOMAIN-SUFFIX,cod-assets.cdn.callofduty.com,游戏节点
   #- DOMAIN-SUFFIX,genesis.stun.us.demonware.net,游戏节点
   #- DOMAIN-SUFFIX,sapphire-lobby.prod.demonware.net,游戏节点
-  #- DOMAIN-SUFFIX,ingest.datax.activision.com,游戏节点
+  - DOMAIN-SUFFIX,ingest.datax.activision.com,游戏节点
   - RULE-SET,private_domain,直连
   - RULE-SET,apple_domain,Apple
   - RULE-SET,proxylite,默认代理
@@ -287,6 +287,7 @@ rule-providers:
   google_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/google.mrs"}
   telegram_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/telegram.mrs"}
   netflix_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/netflix.mrs"}
+
 
 
 
