--- a/yaml/Openclash-Smart-8.4.yaml
+++ b/yaml/Openclash-Smart-8.4.yaml
@@ -65,25 +65,37 @@ external-ui-name: zashboard
 external-ui-url: https://github.com/Zephyruso/zashboard/archive/refs/heads/gh-pages.zip
 secret: "123456"
 
-# DNS模块
+#DNS模块 - 防泄漏优化版
 dns:
   enable: true
   listen: 0.0.0.0:7874
   ipv6: true
-  prefer-h3: false
+  prefer-h3: true
   respect-rules: true
   enhanced-mode: fake-ip
-  fake-ip-range: 198.20.0.1/16
+  fake-ip-range: 198.18.0.1/16 # 建议使用 198.18.0.1/16 这个为 Fake-IP 保留的私有地址段
+  
+  # 使用加密DNS作为默认和备用，彻底杜绝传统DNS查询
   default-nameserver:
-    - 119.29.29.29
-    - 180.184.1.1
-  proxy-server-nameserver: [quic://dns.alidns.com/dns-query, https://sm2.doh.pub/dns-query]
-  direct-nameserver: [quic://dns.alidns.com/dns-query, https://sm2.doh.pub/dns-query]
+    - https://dns.alidns.com/dns-query # 阿里 DoH
+    - https://doh.pub/dns-query      # 腾讯 DoH
+    
+  # 上游DNS服务器，也全部使用加密DNS
   nameserver:
-    - 202.103.24.68
-    - 202.103.44.150
-    #- https://dns.alidns.com/dns-query
-    #- https://doh.pub/dns-query
+    - https://223.5.5.5/dns-query
+    - tls://dns.alidns.com:853
+    
+  # 代理域名使用的DNS，建议使用国外无污染的DNS服务
+  proxy-server-nameserver:
+    - https://dns.google/dns-query
+    - https://cloudflare-dns.com/dns-query
+    
+  # 直连域名使用的DNS，使用国内快速的加密DNS服务
+  direct-nameserver:
+    - https://dns.alidns.com/dns-query
+    - https://doh.pub/dns-query
+
+  # Fake IP 过滤器保持不变
   fake-ip-filter:
     - '*.playstation.net'
     - '*.playstation.com'
@@ -287,6 +299,7 @@ rule-providers:
   google_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/google.mrs"}
   telegram_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/telegram.mrs"}
   netflix_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/netflix.mrs"}
+
 
 
 
