--- a/yaml/Openclash-Smart-8.4.yaml
+++ b/yaml/Openclash-Smart-8.4.yaml
@@ -65,7 +65,7 @@ external-ui-name: zashboard
 external-ui-url: https://github.com/Zephyruso/zashboard/archive/refs/heads/gh-pages.zip
 secret: "123456"
 
-#DNS模块 - 防泄漏优化版
+# DNS模块 - 修正版
 dns:
   enable: true
   listen: 0.0.0.0:7874
@@ -73,29 +73,30 @@ dns:
   prefer-h3: true
   respect-rules: true
   enhanced-mode: fake-ip
-  fake-ip-range: 198.18.0.1/16 # 建议使用 198.18.0.1/16 这个为 Fake-IP 保留的私有地址段
+  fake-ip-range: 198.18.0.1/16
   
-  # 使用加密DNS作为默认和备用，彻底杜绝传统DNS查询
+  # default-nameserver 用于引导解析，必须为纯IP地址。
+  # 此处的DNS请求仅在启动时用于解析上游加密DNS服务器的域名，查询量极少。
   default-nameserver:
-    - https://dns.alidns.com/dns-query # 阿里 DoH
-    - https://doh.pub/dns-query      # 腾讯 DoH
+    - 223.5.5.5
+    - 119.29.29.29
     
-  # 上游DNS服务器，也全部使用加密DNS
+  # nameserver 是主要的上游DNS服务器，在这里使用加密DNS来确保绝大多数查询的安全性。
   nameserver:
-    - https://223.5.5.5/dns-query
-    - tls://dns.alidns.com:853
+    - https://dns.alidns.com/dns-query
+    - https://doh.pub/dns-query
     
-  # 代理域名使用的DNS，建议使用国外无污染的DNS服务
+  # 代理域名使用的DNS，建议使用国外无污染的DNS服务。
   proxy-server-nameserver:
     - https://dns.google/dns-query
     - https://cloudflare-dns.com/dns-query
     
-  # 直连域名使用的DNS，使用国内快速的加密DNS服务
+  # 直连域名使用的DNS，使用国内快速的加密DNS服务。
   direct-nameserver:
     - https://dns.alidns.com/dns-query
     - https://doh.pub/dns-query
 
-  # Fake IP 过滤器保持不变
+  # Fake IP 过滤器保持不变。
   fake-ip-filter:
     - '*.playstation.net'
     - '*.playstation.com'
@@ -299,6 +300,7 @@ rule-providers:
   google_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/google.mrs"}
   telegram_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/telegram.mrs"}
   netflix_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/netflix.mrs"}
+
 
 
 
