--- a/yaml/Openclash-Smart-8.4.yaml
+++ b/yaml/Openclash-Smart-8.4.yaml
@@ -65,43 +65,36 @@ external-ui-name: zashboard
 external-ui-url: https://github.com/Zephyruso/zashboard/archive/refs/heads/gh-pages.zip
 secret: "123456"
 
-# DNS模块 - 修正版
+# DNS模块
 dns:
   enable: true
   listen: 0.0.0.0:7874
   ipv6: true
-  prefer-h3: true
+  prefer-h3: false
   respect-rules: true
   enhanced-mode: fake-ip
-  fake-ip-range: 198.18.0.1/16
-  
-  # default-nameserver 用于引导解析，必须为纯IP地址。
-  # 此处的DNS请求仅在启动时用于解析上游加密DNS服务器的域名，查询量极少。
+  fake-ip-range: 198.20.0.1/16
   default-nameserver:
-    - 223.5.5.5
     - 119.29.29.29
-    
-  # nameserver 是主要的上游DNS服务器，在这里使用加密DNS来确保绝大多数查询的安全性。
+    - 180.184.1.1
+  proxy-server-nameserver: [quic://dns.alidns.com/dns-query, https://sm2.doh.pub/dns-query]
+  direct-nameserver: [quic://dns.alidns.com/dns-query, https://sm2.doh.pub/dns-query]
   nameserver:
-    - https://dns.alidns.com/dns-query
-    - https://doh.pub/dns-query
-    
-  # 代理域名使用的DNS，建议使用国外无污染的DNS服务。
-  proxy-server-nameserver:
-    - https://dns.google/dns-query
-    - https://cloudflare-dns.com/dns-query
-    
-  # 直连域名使用的DNS，使用国内快速的加密DNS服务。
-  direct-nameserver:
-    - https://dns.alidns.com/dns-query
-    - https://doh.pub/dns-query
-
-  # Fake IP 过滤器保持不变。
+    - 202.103.24.68
+    - 202.103.44.150
+    #- https://dns.alidns.com/dns-query
+    #- https://doh.pub/dns-query
   fake-ip-filter:
     - '*.playstation.net'
     - '*.playstation.com'
     - '*.playstationnetwork.com'
     - '*.sonyentertainmentnetwork.com'
+    - +.qeayr.cn
+    - +.saojc.xyz
+    - +.sssyun.xyz
+    - +.dler.cloud
+    - +.0tk8a3a1q4t94dler.com
+    - +.aerianas.top
     - '*.lan'
     - '*.local'
     - 'time.*.com'
@@ -300,6 +293,7 @@ rule-providers:
   google_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/google.mrs"}
   telegram_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/telegram.mrs"}
   netflix_ip: { <<: *ip, url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/netflix.mrs"}
+
 
 
 
